--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -1,6 +1,6 @@
 ---
 title: Content switcher
-description: The content switcher is used to toggle between two or more content sections within the same space on screen.
+description: Content switchers allow users to toggle between two or more content sections within the same space on screen.
 tabs: ["Usage", "Style", "Code", "Accessibility"]
 ---
 
