--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -25,7 +25,7 @@ Content switchers allow users to toggle between two or more content sections wit
 
 ## Overview
 
-The content switcher is used to toggle between two or more content sections within the same space on screen. Only one content section is shown at a time.
+Content switchers allow users to toggle between alternate views of similar or related content. Only one content section is shown at a time.
 
 ### When to use
 
