--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -101,7 +101,7 @@ The content switcher is used for large groups of content, as opposed to the [tog
 
 ### Sizing
 
-The overall content switcher width varies based on the content and layout. Each individual content tab should be the same width. The content tab with the longest text label should have 16px spacing to the right of the label. All other tabs should be that width as well.
+The overall content switcher width varies based on the content and layout. Each individual content tab should be the same width. The content tab with the longest text label should have 16px spacing to the right of the label. The width of all other tabs should match the widest tab.
 
 <DoDontRow>
   <DoDont caption="Do base content tab width on the longest text label.">
