docs: style link

--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -127,7 +127,7 @@ The overall content switcher width varies based on the content and layout. Each 
 
 ### Further guidance
 
-For further content guidance, see Carbon's [content guidelines](notion://www.notion.so/guidelines/content/general).
+For further content guidance, see Carbon's [content guidelines](/guidelines/content/general).
 
 ## Behaviors
 
@@ -147,7 +147,7 @@ The content switcher includes two content tab states: **selected** and **unselec
 </Column>
 </Row>
 
-For detailed visual information about the various states for this component, see the Style tab.
+For detailed visual information about the various states for this component, see the [Style](/components/content-switcher/style) tab.
 
 ### Interactions
 
