add text toolbar description to overview page

--- a/src/pages/patterns/overview.mdx
+++ b/src/pages/patterns/overview.mdx
@@ -23,3 +23,4 @@ Patterns are best practice solutions for how a user achieves a goal. They show r
 | [Notifications](/patterns/notification-pattern) | An important method of communicating with users and providing feedback                                                                  |
 | [Overflow content](/patterns/overflow-content)  | Text, such as a paragraph or a text string, that exceeds a desired space                                                                |
 | [Search](/patterns/search-pattern)              | An intuitive method of discovery, offering users a way to explore a website or application using keywords                               |
+| [Text toolbar](/patterns/text-toolbar-pattern)  | A set of buttons and menus that allows users to edit text.                                                                              |
