docs: fix broken links (#1342)
* docs: fix broken links

* Update src/pages/how-to-contribute/component/index.mdx

Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/how-to-contribute/component/index.mdx
+++ b/src/pages/how-to-contribute/component/index.mdx
@@ -33,7 +33,7 @@ Our component usage documentation typically contains three parts: usage guidance
 
 ### Usage guidance for components with one type
 
-Use this template for documenting components with only one type, that is, no variants. You can see this template in use for [Accordion](/components/accordion) and [Checkbox](/components/checkbox).
+Use this template for documenting components with only one type, that is, no variants. You can see this template in use for [Accordion](/components/accordion/usage) and [Checkbox](/components/checkbox/usage).
 
 ```markdown
 ---
