docs(icons): [Carbon] icons - contribution section text edit (#1377)
* Carbon icon - contribution section text edit

related to issue: https://github.ibm.com/brand/bxd/issues/80

* Update contribute.mdx

* Update contribute.mdx

Co-authored-by: Lauren Rice <43969356+laurenmrice@users.noreply.github.com>
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/guidelines/icons/contribute.mdx
+++ b/src/pages/guidelines/icons/contribute.mdx
@@ -78,6 +78,19 @@ To be considered production-ready, all icon submissions must be delivered in SVG
 
 ## Contribution process
 
-Would your icon be useful for other products? If so, please consider contributing to the design system.
+Does your icon have potential for other products at IBM? If so, please consider contributing to the design system. IBM welcomes icon contributions to our iconography library. You’re welcome to submit a single icon or a batch of icons for approval. 
 
-To submit, open an issue with your icon in the Carbon [GitHub repository](https://github.com/carbon-design-system/carbon/tree/master/packages/icons).
+### Getting started
+
+Before submitting artwork, first review our [icons library](https://www.carbondesignsystem.com/guidelines/icons/library/) or download the [Carbon icon master .ai file](https://github.com/carbon-design-system/carbon/tree/master/packages/icons/master) to check your design for duplication against existing icons.  
+
+### Approval process
+
+Icons for use within IBM must go through a design review process to ensure consistency and proper representation of the IBM brand across all environments. The process begins when you create a GitHub issue. Design review and approval typically take 14–21 days from issue creation, depending on the number of icons contributed.  
+
+If your submission is accepted, the team will assign someone to your issue. If changes are needed, the team will note them in the issue and may return your submission with recommendations or suggest reworking the icon based on feedback from the Design System and Brand teams.  
+
+Once the submission is approved it will then go through our process to be included into the Adobe Illustrator IBM Icon master file and be made available in the IBM Design Language and Carbon libraries. 
+
+Submit icons for approval by creating a [single](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=single-ui-icon-approval.md&title=%5Bui-icon%5D) or [batch](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=batch-ui-icon-approval-request.md&title=%5Bui-icon-batch%5D) GitHub issue for your contribution. 
+
