--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -186,7 +186,7 @@ Matching search results are highlighted in the text area. The number of results 
 <Row>
 <Column colLg={12}>
 
-![Search keywords matches within the text area.](/images/text-toolbar-search-highlight.png)
+![Search keyword matches within the text area.](/images/text-toolbar-search-highlight.png)
 
 </Column>
 </Row>
