use double quotes

--- a/src/pages/guidelines/typography/code.mdx
+++ b/src/pages/guidelines/typography/code.mdx
@@ -116,7 +116,7 @@ You can include a token in your Sass file by writing:
 ```scss
 @import "@carbon/type/scss/styles";
 
-@include carbon--type-style('productive-heading-01');
+@include carbon--type-style("productive-heading-01");
 ```
 
 In addition, if the type style you are using has a fluid style then you can pass
