pictogram size update

--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -55,11 +55,11 @@ It’s important to use pictograms sparingly but effectively throughout your des
 
 ### Sizing
 
-Pictograms are used in a range of sizes, the minimum being 32px while the
+Pictograms are used in a range of sizes, the minimum being 48px while the
 maximum size may vary based on application. Use pictograms at their original
 sizes or scale at accepted increments. You may need to adjust the stroke weight
 accordingly to accommodate larger scales. For more information on scaling and
-accessibility, see the section on mini units on the 2X Grid page.
+accessibility, see the section on mini units on the 2x Grid page.
 
 <ArtDirection>
 
@@ -70,11 +70,11 @@ accessibility, see the section on mini units on the 2X Grid page.
 
 | Icon size | Stroke width | Padding | Live area | Corner Radius |
 | --------- | ------------ | ------- | --------- | ------------- |
-| 32px      | 0.72px       | 1px     | 32px      | 2px           |
 | 48px      | 1.08px       | 1.5px   | 48px      | 3px           |
 | 64px      | 1.44px       | 2px     | 64px      | 4px           |
 | 80px      | 1.80px       | 2.5px   | 80px      | 5px           |
 | 96px      | 2.16px       | 3px     | 96px      | 6px           |
+| 112px     | 2.52px       | 3.5px   | 112px     | 7px           |
 
 <Caption>
   There is no set maximum to pictogram sizes. As you scale pictograms to larger
