Docs: punctuation updates

--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -68,7 +68,7 @@ The hamburger icon is used to open product navigation such as the [left panel.](
 
 #### Header name
 
-For IBM products, the header name is always preceded by “IBM.”
+For IBM products, the header name is always preceded by “IBM”.
 
 #### Header links
 
