--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -105,7 +105,7 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <OrderedList>
               <ListItem>
                 Tab to the breadcrumb and VO announces, "Breadcrumb 1,
-                breadcrumb navigation."
+                breadcrumb navigation".
               </ListItem>
               <ListItem>
                 The Tab key and shift-tab navigate between the links in the
@@ -127,7 +127,7 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <OrderedList>
               <ListItem>
                 Tab to the breadcrumb and VO announces, "Breadcrumb 1,
-                breadcrumb navigation."
+                breadcrumb navigation".
               </ListItem>
               <ListItem>
                 The Tab key and shift-tab navigate between the links in the
