--- a/src/pages/components/button/accessibility.mdx
+++ b/src/pages/components/button/accessibility.mdx
@@ -107,10 +107,10 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <strong>VoiceOver(VO) test:</strong>
             <OrderedList>
               <ListItem>
-                Tab to the first button, VO announces, "The button label"
+                Tab to the first button, VO announces, "The button label".
               </ListItem>
               <ListItem>
-                Clicking the Enter or Space key activates the button
+                Clicking the Enter or Space key activates the button.
               </ListItem>
             </OrderedList>
           </StructuredListCell>
@@ -126,10 +126,10 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <strong>VoiceOver(VO) test:</strong>
             <OrderedList>
               <ListItem>
-                Tab to the first button, VO announces, "The button label"
+                Tab to the first button, VO announces, "The button label".
               </ListItem>
               <ListItem>
-                Clicking the Enter or Space key activates the button
+                Clicking the Enter or Space key activates the button.
               </ListItem>
             </OrderedList>
           </StructuredListCell>
@@ -164,7 +164,7 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <strong>JAWS test:</strong>
             <OrderedList>
               <ListItem>
-                Tab to the first button, JAWS announces, "The button label"
+                Tab to the first button, JAWS announces, "The button label".
               </ListItem>
               <ListItem>
                 Clicking the Enter or Space key activates the button.
@@ -185,7 +185,7 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <strong>JAWS test:</strong>
             <OrderedList>
               <ListItem>
-                Tab to the first button, JAWS announces, "The button label"
+                Tab to the first button, JAWS announces, "The button label".
               </ListItem>
               <ListItem>
                 Clicking the Enter or Space key activates the button.
@@ -206,7 +206,7 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <strong>NVDA test:</strong>
             <OrderedList>
               <ListItem>
-                Tab to the first button, NVDA announces, "The button label"
+                Tab to the first button, NVDA announces, "The button label".
               </ListItem>
               <ListItem>
                 Clicking the Enter or Space key activates the button.
@@ -240,7 +240,7 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <strong>VoiceOver test:</strong>
             <OrderedList>
               <ListItem>
-                Tab to the first button, VO announces, "The button label"
+                Tab to the first button, VO announces, "The button label".
               </ListItem>
               <ListItem>
                 Clicking the Enter or Space key activates the button.
@@ -276,7 +276,7 @@ Accessibility issues are tracked in the [Carbon Design System GitHub repository]
             <strong>Talkback test:</strong>
             <OrderedList>
               <ListItem>
-                Tab to the first button, Talkback announces, "The button label"
+                Tab to the first button, Talkback announces, "The button label".
               </ListItem>
               <ListItem>
                 Clicking the Enter or Space key activates the button.
