--- a/src/pages/components/inline-loading/accessibility.mdx
+++ b/src/pages/components/inline-loading/accessibility.mdx
@@ -102,11 +102,11 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
                 Control-Option-Space."
               </ListItem>
               <ListItem>
-                Press Control-Option-Space keys. VO announces, "Loading data."
+                Press Control-Option-Space keys. VO announces, "Loading data".
               </ListItem>
               <ListItem>
                 Press Control-Option-Space keys again and VO announces, "Data
-                loaded."
+                loaded".
               </ListItem>
             </OrderedList>
           </StructuredListCell>
@@ -145,11 +145,11 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
                 button, to activate press the Space bar."
               </ListItem>
               <ListItem>
-                Press the Space key. JAWS announces, "Alert, Loading data."
+                Press the Space key. JAWS announces, "Alert, Loading data".
               </ListItem>
               <ListItem>
-                Press the Space key again and JAWS announces, "Alet, Data
-                loaded."
+                Press the Space key again and JAWS announces, "Alert, Data
+                loaded".
               </ListItem>
             </OrderedList>
           </StructuredListCell>
@@ -181,15 +181,15 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
             <OrderedList>
               <ListItem>
                 Swipe Right to the Toggle state button. VO announces, "Toggle
-                state button."
+                state button".
               </ListItem>
               <ListItem>
                 Double tap to select the button. VO announces, "Loading data
-                eclipse."
+                eclipse".
               </ListItem>
               <ListItem>
                 Double tap to select the button again. VO announces, "Data
-                loaded."
+                loaded".
               </ListItem>
             </OrderedList>
           </StructuredListCell>
