--- a/src/pages/components/list/accessibility.mdx
+++ b/src/pages/components/list/accessibility.mdx
@@ -182,12 +182,12 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
               <ListItem>
                 JAWS announces, "The beginning of the list, number of items in
                 the list, nesting level, content of the list item, and end of
-                list."
+                list".
               </ListItem>
               <ListItem>
                 Information and the list item content are announced on two
                 separate lines on the virtual viewer. For example, "List of 2
-                itemsnesting level 1. a. Ordered list level 2."
+                items nesting level 1. a. Ordered list level 2".
               </ListItem>
               <ListItem>
                 Bullets and item numbers are also placed on a separate line.
@@ -213,12 +213,12 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
               <ListItem>
                 JAWS announces, "The beginning of the list, number of items in
                 the list, nesting level, content of the list item, and end of
-                list."
+                list".
               </ListItem>
               <ListItem>
                 Information and the list item content are announced on two
                 separate lines on the virtual viewer. For example, "List of 2
-                itemsnesting level 1. a. Ordered list level 2."
+                items nesting level 1. a. Ordered list level 2".
               </ListItem>
               <ListItem>
                 Bullets and item numbers are also placed on a separate line.
@@ -244,12 +244,12 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
               <ListItem>
                 NVDA announces, "The beginning of the list, number of items in
                 the list, nesting level, content of the list item, and end of
-                list."
+                list".
               </ListItem>
               <ListItem>
                 List item parameters are announced together with the list item
                 content. For example, "List with 3 items. 1. Ordered list. Level
-                1."
+                1".
               </ListItem>
             </OrderedList>
           </StructuredListCell>
@@ -332,7 +332,7 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
               </ListItem>
               <ListItem>
                 iOS announces, "The start of the list, nesting level, the
-                content of the list item and the end of the list."
+                content of the list item and the end of the list".
               </ListItem>
               <ListItem>
                 When navigating the list, "list start" is announced on the
