--- a/src/pages/components/loading/accessibility.mdx
+++ b/src/pages/components/loading/accessibility.mdx
@@ -99,7 +99,7 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
             <strong>VoiceOver(VO) test:</strong>
             <OrderedList>
               <ListItem>
-                On page load. VO announces "Active Loading Indicator."
+                On page load. VO announces "Active Loading Indicator".
               </ListItem>
             </OrderedList>
           </StructuredListCell>
@@ -134,7 +134,7 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
             <strong>JAWS test:</strong>
             <OrderedList>
               <ListItem>
-                On page load. JAWS announces "Active Loading Indicator."
+                On page load. JAWS announces "Active Loading Indicator".
               </ListItem>
             </OrderedList>
           </StructuredListCell>
@@ -165,7 +165,7 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
             <strong>VoiceOver test:</strong>
             <OrderedList>
               <ListItem>
-                On page load. VO announces "Active Loading Indicator."
+                On page load. VO announces "Active Loading Indicator".
               </ListItem>
             </OrderedList>
           </StructuredListCell>
