--- a/src/pages/components/radio-button/accessibility.mdx
+++ b/src/pages/components/radio-button/accessibility.mdx
@@ -254,7 +254,7 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
               </ListItem>
               <ListItem>
                 The individual buttons are announced as,"radio button label
-                radio button checked 1 of 3"
+                radio button checked 1 of 3".
               </ListItem>
               <ListItem>
                 VO announces the disabled radio button as "radio button label
@@ -304,13 +304,13 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
               </ListItem>
               <ListItem>
                 The individual buttons are announced as, "checked radio button
-                label radio button"
+                label radio button".
               </ListItem>
               <ListItem>Disabled radio buttons are not indicated.</ListItem>
               <ListItem>
                 When double tapping on a radio button, it becomes activated and
                 Talkback announces: "not checked checked" or "checked not
-                checked"
+                checked".
               </ListItem>
               <ListItem>
                 Note: The user has to swipe away and back to make sure the
