--- a/src/pages/components/search/accessibility.mdx
+++ b/src/pages/components/search/accessibility.mdx
@@ -104,7 +104,7 @@ Accessibility issues are tracked in the [Carbon Component GitHub repository](htt
             <OrderedList>
               <ListItem>
                 Tab to the Search Custom Button component. VO announces, "Search
-                edit text main."
+                edit text main".
               </ListItem>
               <ListItem>
                 Enter text in the text field. VO announces each letter as its
