--- a/src/pages/components/search/usage.mdx
+++ b/src/pages/components/search/usage.mdx
@@ -82,7 +82,7 @@ Accessibility note: If the search component's label and placeholder text differ,
 - Clearly show which results are being displayed with labels or headers (i.e. Results for X).
 - Categorize the search results if they come from different areas (eg. docs, services, apps, tutorials, blogs).
 - Give the user control over their viewing options and ability to sort results (eg. relevancy, popularity, ratings, date).
-- Have a clear, “no results,” message and offer suggestions if possible.
+- Have a clear, “no results”, message and offer suggestions if possible.
 - Have smart algorithms that can search for similar terms or can search even with misspelled words.
 - Include enough of a description in the results for users to make a judgement as to whether that particular result is relevant.
 - Highlight the search term in the results, where appropriate.
