--- a/src/pages/components/select/usage.mdx
+++ b/src/pages/components/select/usage.mdx
@@ -159,7 +159,7 @@ The order of the select list should be based on the frequency of use. If applica
 ### Styling select dropdowns
 
 To maximize accessibility, it is strongly recommended not to style select dropdowns.
-One of the [WCAG 2.0 standards](https://www.w3.org/TR/WCAG20-TECHS/G202.html) for accessibility is “ensuring keyboard control for all functionality.” CSS alternatives to select elements do not meet this requirement.
+One of the [WCAG 2.0 standards](https://www.w3.org/TR/WCAG20-TECHS/G202.html) for accessibility is “ensuring keyboard control for all functionality”. CSS alternatives to select elements do not meet this requirement.
 
 While you can make a select element easily usable by a mouse, making it usable with keyboard navigation is complex. The default select element should follow this process:
 
