--- a/src/pages/data-visualization/chart-anatomy/index.mdx
+++ b/src/pages/data-visualization/chart-anatomy/index.mdx
@@ -100,4 +100,4 @@ In a circular chart, labels offer the percentage value of the whole for an indiv
 
 #### Big number or KPI
 
-A key performance indicator (KPI) consists of a number with a single word description. Examples include “15,250 browsers,” “\$1.3M revenue,” or “Total 450.” A big number inside the donut chart may be used to display a total sum or the individual count of a slice upon interaction. This element can also be used independently on a dashboard (though please note this component is still a WIP and not available outside the donut chart).
+A key performance indicator (KPI) consists of a number with a single word description. Examples include “15,250 browsers”, “\$1.3M revenue”, or “Total 450”. A big number inside the donut chart may be used to display a total sum or the individual count of a slice upon interaction. This element can also be used independently on a dashboard (though please note this component is still a WIP and not available outside the donut chart).
