--- a/src/pages/guidelines/accessibility/overview.mdx
+++ b/src/pages/guidelines/accessibility/overview.mdx
@@ -92,10 +92,10 @@ Low vision can include partial sight in one or both eyes and can range from mild
 
 | Type                       | Visual deficiency                                                                        |
 | -------------------------- | ---------------------------------------------------------------------------------------- |
-| _Low acuity_               | Also known as "blurred vision." Can make text difficult to read, since it appears fuzzy. |
+| _Low acuity_               | Also known as "blurred vision". Can make text difficult to read, since it appears fuzzy. |
 | _Low contrast sensitivity_ | Decreased ability to determine fine detail and distinguish one object from another       |
 | _Obstructed visual field_  | The user's view is partially obstructed. Can include central vision and spotty vision.   |
-| _Retinitis Pigmentosa_     | Also known as "tunnel vision." The user is only able to see central elements.            |
+| _Retinitis Pigmentosa_     | Also known as "tunnel vision". The user is only able to see central elements.            |
 
 <Title>Low vision disabilities</Title>
 
