--- a/src/pages/guidelines/pictograms/contribute.mdx
+++ b/src/pages/guidelines/pictograms/contribute.mdx
@@ -69,7 +69,7 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 1. Select all overlapping shapes and click the “Unite” icon in the Pathfinder panel to merge all of the shapes together.
 1. Make sure the icon is at #000000 and has no additional styling.
 1. Select File > Save a Copy… from the top navigation.
-1. On the Format dropdown select “SVG.”
+1. On the Format dropdown select “SVG”.
 1. Below Format select Use Artboard, then select either all or a range of artboards, depending on your need.
 1. Click Save.
 1. The SVG Options dialog will then open.
