--- a/src/pages/patterns/global-header/index.mdx
+++ b/src/pages/patterns/global-header/index.mdx
@@ -32,7 +32,7 @@ This pattern covers the foundation of using UI Shell components for within and b
 ![Example diagram of the global header.](images/header-anatomy.png)
 
 1. **Hamburger:** The hamburger icon is used to open product navigation such as the [left panel](/components/UI-shell-left-panel/usage/).
-1. **Header name:** For IBM products, the header name is always preceded by “IBM.” This should always and only link the user to the domain’s home page.
+1. **Header name:** For IBM products, the header name is always preceded by “IBM”. This should always and only link the user to the domain’s home page.
 1. **Header links:** Links in the header are supported as product navigation, if required. These links should not open a new tab or link to another domain. These links drop down to the side menu in narrow screen widths.
 1. **Sub-menu:** Sub-menus are supported as product navigation, if required. Dropdowns open on click and are closed by either selecting an item in the menu, clicking outside the menu area, or clicking on the menu label. When open, the chevron should point up. Dropdown menu labels serve only to open the dropdown; they cannot be a link to another page in the product.
 1. **Utilities:** The header provides a home for global system-level utilities from anywhere in the site. Utility icons should not be used to directly navigate to an area. Instead, they should open a panel that provides access to other places in the product.
