--- a/src/pages/patterns/login-pattern/index.mdx
+++ b/src/pages/patterns/login-pattern/index.mdx
@@ -35,7 +35,7 @@ Login is often the first interaction a user has with your product. This entry po
 </Column>
 </Row>
 
-1. **Title:** Located at the top of the log in flow. For consistency, the title should include the words “Log in,” rather than “Sign in” or another variant. The title can also include the product name if that makes sense for your situation. If necessary the title can wrap to the next line.
+1. **Title:** Located at the top of the log in flow. For consistency, the title should include the words “Log in” rather than “Sign in” or another variant. The title can also include the product name if that makes sense for your situation. If necessary the title can wrap to the next line.
 2. **Create account (optional):** Link to URX form to create an account; location of this element can vary with layout.
 3. **Required fields:** The user ID and password fields are both required although, in IBM’s preferred log in flow, the password field is progressively disclosed, because it has a dependency on the user ID. User IDs are usually in the form of an email address. Depending on the product, this area may also include a filter to specify the ID type.
 4. **Forgot username/password link:** Takes users to a page where they can recover their username and/or password.
