--- a/src/pages/patterns/search-pattern/index.mdx
+++ b/src/pages/patterns/search-pattern/index.mdx
@@ -136,7 +136,7 @@ The placement of your search field depends on the construction of your applicati
 
 #### Avoid dead ends
 
-If a search returns "No results," suggest a follow-up action. Provide suggestions and helpful resources to aid the user in finding what they are looking for. For more on no results for searches, see the [empty states pattern](/patterns/empty-states-pattern).
+If a search returns "No results", suggest a follow-up action. Provide suggestions and helpful resources to aid the user in finding what they are looking for. For more on no results for searches, see the [empty states pattern](/patterns/empty-states-pattern).
 
 #### Include a loading indicator
 
@@ -350,7 +350,7 @@ When the user clicks or tabs into the focused search field, a menu appears with 
 
 You can also cluster active results by category with the option to "View all" within the category. This is ideal for a user who may be searching within several similar data sets without knowing where the information lives. If the user is likely to know the location of their data, offer a scope filter.
 
-A successful focused search will route a user directly to a page or resource. In the event the user does select "See all results," present a [results page](basic-search). Always include the number of search results, including for searches with no results.
+A successful focused search will route a user directly to a page or resource. In the event the user does select "See all results", present a [results page](basic-search). Always include the number of search results, including for searches with no results.
 
 ## Accessibility
 
