--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -50,7 +50,7 @@ Use a modal dialog to confirm user decisions. Clearly describe the action being 
 | [Passive](/components/modal/usage#passive-modal)               | Presents information the user needs to be aware of concerning their current workflow. Contains no actions for the user to take. |
 | [Transactional](/components/modal/usage#transactional-modal)   | Requires an action to be taken in order for the modal to be completed and closed. Contains a cancel and primary action buttons. |
 | [Danger](/components/modal/usage#danger-modal)                 | A specific type of transactional modal used for destructive or irreversible actions.                                            |
-| [Acknowledgment](/components/modal/usage#acknowledgment-modal) | System requires an acknowledgement of the information from the user. Contains only a single button, commonly "OK."              |
+| [Acknowledgment](/components/modal/usage#acknowledgment-modal) | System requires an acknowledgement of the information from the user. Contains only a single button, commonly "OK".              |
 | [Progress](/components/modal/usage#progress-modal)             | Requires several steps to be completed before it can be closed. Contains a cancel, previous, and next/completion buttons.       |
 
 ## Live demo
@@ -367,7 +367,7 @@ Danger modal is a specific type of [transactional modal](/modal/usage#transactio
 
 ### Acknowledgment modal
 
-Acknowledgment modals are used when the system requires the user to acknowledge the presented information. It contains only a single button, commonly “OK.”  Acknowledgment is confirmed when the user clicks the primary button.
+Acknowledgment modals are used when the system requires the user to acknowledge the presented information. It contains only a single button, commonly “OK”.  Acknowledgment is confirmed when the user clicks the primary button.
 
 #### Dismissing an acknowledgment modal
 
