--- a/src/pages/how-to-contribute/contribute-icons.mdx
+++ b/src/pages/how-to-contribute/contribute-icons.mdx
@@ -67,7 +67,7 @@ To be considered production-ready, all icon submissions must be delivered in SVG
 4. Select all overlapping shapes and click the "Unite" icon in the Pathfinder panel to merge all of the shapes together.
 5. Make sure the icon is at `#000000` and has no additional styling.
 6. Select `File` → `Save a Copy...` from the top navigation.
-7. On the `Format` dropdown select "SVG."
+7. On the `Format` dropdown select "SVG".
 8. Below `Format` select `Use Artboard`, then select either all or a range of artboards, depending on your need.
 9. Click `Save`.
 10. The `SVG Options` dialog will then open.
@@ -83,18 +83,18 @@ To be considered production-ready, all icon submissions must be delivered in SVG
 
 ## Contribution process
 
-Does your icon have potential for other products at IBM? If so, please consider contributing to the design system. IBM welcomes icon contributions to our iconography library. You’re welcome to submit a single icon or a batch of icons for approval. 
+Does your icon have potential for other products at IBM? If so, please consider contributing to the design system. IBM welcomes icon contributions to our iconography library. You’re welcome to submit a single icon or a batch of icons for approval.
 
 ### Getting started
 
-Before submitting artwork, first review our [icons library](https://www.carbondesignsystem.com/guidelines/icons/library/) or download the [Carbon icon master .ai file](https://github.com/carbon-design-system/carbon/tree/master/packages/icons/master) to check your design for duplication against existing icons.  
+Before submitting artwork, first review our [icons library](https://www.carbondesignsystem.com/guidelines/icons/library/) or download the [Carbon icon master .ai file](https://github.com/carbon-design-system/carbon/tree/master/packages/icons/master) to check your design for duplication against existing icons.
 
 ### Approval process
 
-Icons for use within IBM must go through a design review process to ensure consistency and proper representation of the IBM brand across all environments. The process begins when you create a GitHub issue. Design review and approval typically take 14–21 days from issue creation, depending on the number of icons contributed.  
+Icons for use within IBM must go through a design review process to ensure consistency and proper representation of the IBM brand across all environments. The process begins when you create a GitHub issue. Design review and approval typically take 14–21 days from issue creation, depending on the number of icons contributed.
 
-If your submission is accepted, the team will assign someone to your issue. If changes are needed, the team will note them in the issue and may return your submission with recommendations or suggest reworking the icon based on feedback from the Design System and Brand teams.  
+If your submission is accepted, the team will assign someone to your issue. If changes are needed, the team will note them in the issue and may return your submission with recommendations or suggest reworking the icon based on feedback from the Design System and Brand teams.
 
-Once the submission is approved it will then go through our process to be included into the Adobe Illustrator IBM Icon master file and be made available in the IBM Design Language and Carbon libraries. 
+Once the submission is approved it will then go through our process to be included into the Adobe Illustrator IBM Icon master file and be made available in the IBM Design Language and Carbon libraries.
 
-Submit icons for approval by creating a [single](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=single-ui-icon-approval.md&title=%5Bui-icon%5D) or [batch](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=batch-ui-icon-approval-request.md&title=%5Bui-icon-batch%5D) GitHub issue for your contribution. 
+Submit icons for approval by creating a [single](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=single-ui-icon-approval.md&title=%5Bui-icon%5D) or [batch](https://github.ibm.com/brand/ui-icons/issues/new?assignees=&labels=&template=batch-ui-icon-approval-request.md&title=%5Bui-icon-batch%5D) GitHub issue for your contribution.
