--- a/src/pages/patterns/dialog-pattern/index.mdx
+++ b/src/pages/patterns/dialog-pattern/index.mdx
@@ -151,7 +151,7 @@ If a modal dialog needs more space than the large modal component allows then th
 | -------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------- |
 | [Passive](/components/modal/usage#passive-modal)               | Presents information the user needs to be aware of concerning their current workflow. Contains no actions for the user to take. |
 | [Transactional](/components/modal/usage#transactional-modal)   | Requires an action to be taken in order for the modal to be completed and closed. Contains a cancel and primary action buttons. |
-| [Acknowledgment](/components/modal/usage#acknowledgment-modal) | System requires an acknowledgement of the information from the user. Contains only a single button, commonly "OK."              |
+| [Acknowledgment](/components/modal/usage#acknowledgment-modal) | System requires an acknowledgement of the information from the user. Contains only a single button, commonly "OK".              |
 | [Progress](/components/modal/usage/#progress-modal)            | Requires several steps to be completed before it can be closed. Contains a cancel, previous and next/completion buttons.        |
 
 ### Dismissing variant modals
@@ -171,7 +171,7 @@ For transactional, progress, and acknowledgement modals:
 
 ## Non-modal dialogs
 
-Use non-modal dialogs to display non-critical information or optional tasks related to the user’s current workflow, like "find and replace." A user still has access to the on-page content while the non-modal dialog is open and a response is not required to continue working. However, a non-modal dialog does require an action from the user to be dismissed.
+Use non-modal dialogs to display non-critical information or optional tasks related to the user’s current workflow, like "find and replace". A user still has access to the on-page content while the non-modal dialog is open and a response is not required to continue working. However, a non-modal dialog does require an action from the user to be dismissed.
 
 <Row>
 <Column colLg={8}>
