Fixes on advanced chart images

--- a/src/pages/data-visualization/advanced-charts/index.mdx
+++ b/src/pages/data-visualization/advanced-charts/index.mdx
@@ -17,7 +17,7 @@ Advanced charts are a powerful way to display complex data sets. While less intu
 
 <AnchorLinks>
 
-<AnchorLink>Alluvial diagrams</AnchorLink>
+<AnchorLink>Alluvial/sankey diagrams</AnchorLink>
 <AnchorLink>Heat maps</AnchorLink>
 <AnchorLink>Network diagrams</AnchorLink>
 <AnchorLink>Parallel coordinates</AnchorLink>
@@ -26,7 +26,7 @@ Advanced charts are a powerful way to display complex data sets. While less intu
 
 </AnchorLinks>
 
-## Alluvial diagrams
+## Alluvial/sankey diagrams
 
 Alluvial, or Sankey diagrams, are a type flow diagram designed to show two indicators of a dataset and how records distribute among them, highlighting correlations.
 
@@ -216,7 +216,7 @@ When dealing with large amounts of data in a constrained space, tree structured 
 
 <Caption>
   Example of a basic tree map where countries are colored according to the
-  content they belong to
+  continent they belong to
 </Caption>
 
 </Column>
@@ -234,8 +234,8 @@ As with [heat maps](../data-visualization/advanced-charts#heat-maps), the diverg
 ![Basic tree map](images/new_adv_treemap_02_928.png)
 
 <Caption>
-  Example of a "trheat" map adding color as a second variable to a basic tree
-  map structure
+  Example of a divergent tree map adding color as a second variable to a basic
+  tree map structure
 </Caption>
 
 </Column>
@@ -254,7 +254,7 @@ As with [heat maps](../data-visualization/advanced-charts#heat-maps), the diverg
 
 ![Tooltip detail](images/new_adv_treemap_b_288.png)
 
-<Caption>Detail of a comparative tooltip on a "trheat" map</Caption>
+<Caption>Detail of a comparative tooltip on a divergent tree map</Caption>
 
 </Column>
 </Row>
