feat: add alert colors

--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -76,17 +76,7 @@ The purple-teal palette is good for data with no temperature associations, such 
 
 Alert colors are used to reflect status. Typically, red represents danger or error; orange represents a serious warning; yellow represents a regular warning, and green represents normal or success.
 
-<Row>
-<Column colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![Alert palette](images/palettes-alert-sm.png)
-![Alert palette](images/palettes-alert.png)
-![Alert palette](images/palettes-alert.png)
-
-</ArtDirection>
-</Column>
-</Row>
+<ColorPalette type="alert" />
 
 ## Gradient use
 
